--- a/DementeNatural-Movil/app/src/main/res/layout/item_product.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/item_product.xml
@@ -54,10 +54,10 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="12dp"
         android:src="@drawable/ic_edit"
-        android:tint="@color/dark_brown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/dark_brown" />
 
     <!-- Delete Button -->
     <ImageButton
@@ -68,10 +68,10 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="12dp"
         android:src="@drawable/ic_delete"
-        android:tint="@color/dark_brown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/dark_brown" />
 
     <!-- Divider -->
     <View
