--- a/DementeNatural-Movil/app/src/main/res/layout/activity_registrar_venta.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_registrar_venta.xml
@@ -49,7 +49,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/ic_search"
-                android:tint="@color/dark_brown" />
+                app:tint="@color/dark_brown" />
 
             <EditText
                 android:id="@+id/searchInput"
