--- a/DementeNatural-Movil/app/src/main/res/layout/activity_registro.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_registro.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cream"
-    tools:context=".Registro">
+    >
 
     <!-- Logo de Dementenatural -->
     <ImageView
@@ -15,9 +15,9 @@
         android:layout_height="223dp"
         android:layout_marginTop="80dp"
         android:src="@drawable/dementenaturallogo"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Título Registro -->
     <TextView
@@ -29,66 +29,66 @@
         android:textColor="@color/dark_brown"
         android:textSize="28sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageLogo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageLogo" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Campo de correo electrónico -->
+    <!-- Correo electrónico -->
     <EditText
         android:id="@+id/editEmail"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/edit_text_border"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:hint="Correo electrónico"
         android:inputType="textEmailAddress"
+        android:autofillHints="emailAddress"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textColor="@color/dark_text"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/edit_text_border"
+        app:layout_constraintTop_toBottomOf="@id/textTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textTitle" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Campo de contraseña -->
+    <!-- Contraseña -->
     <EditText
         android:id="@+id/editPassword"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/edit_text_border"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:hint="Contraseña"
         android:inputType="textPassword"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textColor="@color/dark_text"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/editEmail"
-        app:layout_constraintStart_toStartOf="@id/editEmail"
-        app:layout_constraintTop_toBottomOf="@id/editEmail" />
+        android:background="@drawable/edit_text_border"
+        app:layout_constraintTop_toBottomOf="@id/editEmail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Container para Rol -->
+    <!-- Spinner Rol -->
     <FrameLayout
         android:id="@+id/containerRol"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/edit_text_border"
-        app:layout_constraintEnd_toEndOf="@id/editPassword"
-        app:layout_constraintStart_toStartOf="@id/editPassword"
-        app:layout_constraintTop_toBottomOf="@id/editPassword">
+        app:layout_constraintTop_toBottomOf="@id/editPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Spinner con estilo personalizado -->
         <Spinner
             android:id="@+id/spinnerRol"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:spinnerMode="dropdown"
             android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:spinnerMode="dropdown" />
+            android:paddingEnd="16dp"/>
 
-        <!-- Flecha del dropdown -->
         <ImageView
             android:id="@+id/imageRolArrow"
             android:layout_width="24dp"
@@ -96,31 +96,30 @@
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="16dp"
             android:src="@drawable/dropdown_arrow"
-            app:tint="@color/gold" />
-
+            app:tint="@color/gold"/>
     </FrameLayout>
 
-    <!-- Container para Sede -->
+    <!-- Spinner Sede -->
     <FrameLayout
         android:id="@+id/containerSede"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/edit_text_border"
-        app:layout_constraintEnd_toEndOf="@id/containerRol"
-        app:layout_constraintStart_toStartOf="@id/containerRol"
-        app:layout_constraintTop_toBottomOf="@id/containerRol">
+        app:layout_constraintTop_toBottomOf="@id/containerRol"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Spinner con estilo personalizado -->
         <Spinner
             android:id="@+id/spinnerSede"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:spinnerMode="dropdown"
             android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:spinnerMode="dropdown" />
+            android:paddingEnd="16dp"/>
 
-        <!-- Flecha del dropdown -->
         <ImageView
             android:id="@+id/imageSedeArrow"
             android:layout_width="24dp"
@@ -128,8 +127,7 @@
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="16dp"
             android:src="@drawable/dropdown_arrow"
-            app:tint="@color/gold" />
-
+            app:tint="@color/gold"/>
     </FrameLayout>
 
     <!-- Botón Registrar -->
@@ -138,16 +136,16 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="@color/gold"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:text="Registrar"
         android:textAllCaps="false"
-        android:textColor="@color/white"
         android:textSize="18sp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/gold"
         app:cornerRadius="6dp"
-        app:layout_constraintEnd_toEndOf="@id/containerSede"
-        app:layout_constraintStart_toStartOf="@id/containerSede"
-        app:layout_constraintTop_toBottomOf="@id/containerSede" />
-
-    <!-- Línea inferior -->
+        app:layout_constraintTop_toBottomOf="@id/containerSede"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
