--- a/DementeNatural-Movil/app/src/main/res/layout/activity_consultar_inventario.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_consultar_inventario.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cream"
+    android:id="@+id/main"
     tools:context=".Consultar_Inventario">
 
     <!-- Title -->
