--- a/DementeNatural-Movil/app/src/main/res/layout/activity_menu_trabajador.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_menu_trabajador.xml
@@ -20,16 +20,19 @@
     <!-- Welcome Message -->
     <TextView
         android:id="@+id/welcomeMessage"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:text="Bienvenido, @user"
+        android:layout_marginTop="40dp"
+        android:text="Bienvenido, email\nSede: Sede1"
         android:textColor="@color/dark_brown"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:gravity="center"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/statusBarMockup"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
 
     <!-- Logo -->
     <ImageView
