--- a/DementeNatural-Movil/app/src/main/res/layout/activity_consultar_inventario.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_consultar_inventario.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cream"
-    android:id="@+id/main"
     tools:context=".Consultar_Inventario">
 
     <!-- Title -->
@@ -13,8 +13,8 @@
         android:id="@+id/titleInventory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="Consultar\nInventario"
         android:textColor="@color/dark_brown"
         android:textSize="28sp"
@@ -33,22 +33,23 @@
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="24dp"
         app:cardElevation="2dp"
-        app:layout_constraintEnd_toStartOf="@+id/filterButton"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/filterButton"
         app:layout_constraintTop_toBottomOf="@id/titleInventory">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
             android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:paddingStart="16dp">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_search"
-                android:tint="@color/dark_brown" />
+                app:tint="@color/dark_brown"
+                android:contentDescription="Buscar" />
 
             <EditText
                 android:id="@+id/searchInput"
@@ -57,6 +58,8 @@
                 android:layout_marginStart="8dp"
                 android:background="@null"
                 android:hint="Buscar"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
                 android:textColor="@color/dark_brown"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp" />
@@ -82,7 +85,8 @@
             android:text="Filtro"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:contentDescription="Filtrar inventario" />
     </androidx.cardview.widget.CardView>
 
     <!-- Product List -->
@@ -92,20 +96,21 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/addProductButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchBarContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomIndicator"
         tools:listitem="@layout/item_product_consultar" />
 
     <!-- Bottom Navigation Indicator -->
     <View
+        android:id="@+id/bottomIndicator"
         android:layout_width="50dp"
         android:layout_height="4dp"
         android:layout_marginBottom="8dp"
         android:background="@color/dark_brown"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
