--- a/DementeNatural-Movil/app/src/main/res/layout/activity_consultar_inventario.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_consultar_inventario.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -34,7 +35,7 @@
         app:cardCornerRadius="24dp"
         app:cardElevation="2dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/filterButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleInventory">
 
         <LinearLayout
@@ -64,29 +65,6 @@
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp" />
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <!-- Filter Button -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/filterButton"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="24dp"
-        app:cardBackgroundColor="@color/gold"
-        app:cardCornerRadius="24dp"
-        app:cardElevation="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/searchBarContainer">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Filtro"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:contentDescription="Filtrar inventario" />
     </androidx.cardview.widget.CardView>
 
     <!-- Product List -->
