--- a/DementeNatural-Movil/app/src/main/res/layout/activity_gestionar_inventario.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_gestionar_inventario.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -33,22 +34,23 @@
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="24dp"
         app:cardElevation="2dp"
-        app:layout_constraintEnd_toStartOf="@+id/filterButton"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleInventory">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
             android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:paddingStart="16dp">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_search"
-                android:tint="@color/dark_brown" />
+                app:tint="@color/dark_brown"
+                android:contentDescription="Buscar" />
 
             <EditText
                 android:id="@+id/searchInput"
@@ -57,32 +59,12 @@
                 android:layout_marginStart="8dp"
                 android:background="@null"
                 android:hint="Buscar"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
                 android:textColor="@color/dark_brown"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp" />
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <!-- Filter Button -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/filterButton"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="24dp"
-        app:cardBackgroundColor="@color/gold"
-        app:cardCornerRadius="24dp"
-        app:cardElevation="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/searchBarContainer">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Filtro"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 
     <!-- Product List -->
@@ -92,10 +74,10 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/addProductButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchBarContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/addProductButton"
         tools:listitem="@layout/item_product" />
 
     <!-- Add Product Button -->
