--- a/DementeNatural-Movil/app/src/main/res/values/themes.xml
+++ b/DementeNatural-Movil/app/src/main/res/values/themes.xml
@@ -5,5 +5,5 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.DementeNatural" parent="Base.Theme.DementeNatural" />
+    <style name="Theme.DementeNatural" parent="Theme.Material3.DayNight.NoActionBar" />
 </resources>
