--- a/DementeNatural-Movil/app/src/main/res/layout/activity_login.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_login.xml
@@ -91,9 +91,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="¿Olvidó su contraseña?"
+        android:text="Desarrollador: Juan Andrés Lacouture Daza"
         android:textColor="@color/dark_brown"
-        android:textSize="20dp"
+        android:textSize="17dp"
         app:layout_constraintEnd_toEndOf="@id/buttonLogin"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@id/buttonLogin"
